objects/trailheadapp__Badge__c.object
<CustomObject>
    <fields>
        <fullName>trailheadapp__API_Name__c</fullName>
        <externalId>true</externalId>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>trailheadapp__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This badge has been archived and is no longer available.</inlineHelpText>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Badge_Icon__c</fullName>
        <formula>IMAGE( trailheadapp__Icon__c , Name , 50, 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Badge Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Built_Date__c</fullName>
        <label>Built Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Created_At__c</fullName>
        <description>The created date time for the badge.</description>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>trailheadapp__External_Id__c</fullName>
        <description>This field has been deprecated and is no longer being used.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the Trailhead unique ID.</inlineHelpText>
        <label>External Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>trailheadapp__Icon__c</fullName>
        <label>Icon</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                    <default>true</default>
                    <label>Beginner</label>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>trailheadapp__Namespace__c</fullName>
        <label>Namespace</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Products__c</fullName>
        <label>Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Roles__c</fullName>
        <label>Roles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Tags__c</fullName>
        <label>Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Total_Badges_Awarded__c</fullName>
        <label>Total Badges Awarded</label>
        <summaryFilterItems>
            <field>trailheadapp__User_Badge__c.trailheadapp__Finished_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>trailheadapp__User_Badge__c.trailheadapp__Badge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Total_Badges_In_Progress__c</fullName>
        <label>Total Badges In Progress</label>
        <summaryFilterItems>
            <field>trailheadapp__User_Badge__c.trailheadapp__Finished_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>trailheadapp__User_Badge__c.trailheadapp__Badge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Module</fullName>
                    <default>true</default>
                    <label>Module</label>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Superbadge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>trailheadapp__URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <description>Available Trailhead badges.</description>
    <label>Badge</label>
    <nameField>
        <label>Badge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>trailheadapp__All</fullName>
        <columns>NAME</columns>
        <columns>trailheadapp__Level__c</columns>
        <columns>trailheadapp__Type__c</columns>
        <columns>trailheadapp__Total_Badges_Awarded__c</columns>
        <columns>trailheadapp__Total_Badges_In_Progress__c</columns>
        <columns>trailheadapp__Created_At__c</columns>
        <columns>trailheadapp__Badge_Icon__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>trailheadapp__All_Modules</fullName>
        <columns>NAME</columns>
        <columns>trailheadapp__Description__c</columns>
        <columns>trailheadapp__Roles__c</columns>
        <columns>trailheadapp__Level__c</columns>
        <columns>trailheadapp__Total_Badges_In_Progress__c</columns>
        <columns>trailheadapp__Total_Badges_Awarded__c</columns>
        <columns>trailheadapp__Archived__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>trailheadapp__Type__c</field>
            <operation>equals</operation>
            <value>Module</value>
        </filters>
        <label>All Modules</label>
    </listViews>
    <listViews>
        <fullName>trailheadapp__All_Projects</fullName>
        <columns>NAME</columns>
        <columns>trailheadapp__Description__c</columns>
        <columns>trailheadapp__Roles__c</columns>
        <columns>trailheadapp__Level__c</columns>
        <columns>trailheadapp__Total_Badges_In_Progress__c</columns>
        <columns>trailheadapp__Total_Badges_Awarded__c</columns>
        <columns>trailheadapp__Archived__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>trailheadapp__Type__c</field>
            <operation>equals</operation>
            <value>Project</value>
        </filters>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>trailheadapp__All_Superbadges</fullName>
        <columns>NAME</columns>
        <columns>trailheadapp__Description__c</columns>
        <columns>trailheadapp__Total_Badges_In_Progress__c</columns>
        <columns>trailheadapp__Total_Badges_Awarded__c</columns>
        <columns>trailheadapp__Archived__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>trailheadapp__Type__c</field>
            <operation>equals</operation>
            <value>Superbadge</value>
        </filters>
        <label>All Superbadges</label>
    </listViews>
</CustomObject>